--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">www.cheriyath.in</h1>
+      <h1 class="project-name">Mithun Cheriyath</h1>
       <h2 class="project-tagline">A Technology Enthusiast</h2>
     </section>
 
