--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
 
 <head>
-
+  <script>
+    var host = "cheriyath.com";
+    if ((host == window.location.host) && (window.location.protocol != "https:"))
+      window.location.protocol = "https";
+  </script>
   <meta charset="utf-8">
+  <link rel="canonical" href="cheriyath.com" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
