Updating website theme link

--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
         </div>
         <div class="col-md-4">
           <h4 class="text-uppercase mb-4">About This Site</h4>
-          <p class="lead mb-0">Developed using Freelance, open source Bootstrap theme created by
-            <a href="https://startbootstrap.com">Start Bootstrap</a>.</p>
+          <p class="lead mb-0">Developed using theme created by
+            <a href="hhttps://github.com/StartBootstrap">Start Bootstrap</a>.</p>
         </div>
       </div>
     </div>
