--- a/index.html
+++ b/index.html
@@ -144,16 +144,16 @@
       <hr class="star-light mb-5">
       <div class="row">
         <div class="col-lg-4 ml-auto">
-          <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+          <p class="lead">Highly skilled AWS Solutions Architect and DevOps Engineer with extensive experience in cloud infrastructure, CI/CD pipelines, and automation. Expertise in AWS, Kubernetes, Docker, and infrastructure as code using Terraform and CloudFormation.</p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+          <p class="lead">Passionate about implementing scalable, resilient systems with a focus on security and performance optimization. Experienced in building monitoring solutions and creating automated deployment strategies for complex applications.</p>
         </div>
       </div>
       <div class="text-center mt-4">
-        <a class="btn btn-xl btn-outline-light" href="#">
+        <a class="btn btn-xl btn-outline-light" href="files/MithunCheriyath_DevOps.pdf">
           <i class="fas fa-download mr-2"></i>
-          Download Now!
+          Download CV
         </a>
       </div>
     </div>
