Update portfolio headings and fix syntax error

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                 <i class="fas fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/cabin.png" alt="AWS Infrastructure">
+            <img class="img-fluid" src="img/portfolio/cabin.png" alt="Lead Software Engineer">
           </a>
-          <h4 class="text-center mt-2">AWS Infrastructure</h4>
+          <h4 class="text-center mt-2">Lead Software Engineer</h4>
         </div>
         <div class="col-md-6 col-lg-4">
           <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-2">
@@ -91,9 +91,9 @@
                 <i class="fas fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/cake.png" alt="CI/CD Pipelines">
+            <img class="img-fluid" src="img/portfolio/cake.png" alt="Lead Devops Architect">
           </a>
-          <h4 class="text-center mt-2">CI/CD Pipelines</h4>
+          <h4 class="text-center mt-2">Lead Devops Architect</h4>
         </div>
         <div class="col-md-6 col-lg-4">
           <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-3">
@@ -102,9 +102,9 @@
                 <i class="fas fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/circus.png" alt="Kubernetes Clusters">
+            <img class="img-fluid" src="img/portfolio/circus.png" alt="DevOps Architects">
           </a>
-          <h4 class="text-center mt-2">Kubernetes Clusters</h4>
+          <h4 class="text-center mt-2">DevOps Architect</h4>
         </div>
         <div class="col-md-6 col-lg-4">
           <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-4">
@@ -113,9 +113,9 @@
                 <i class="fas fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/game.png" alt="Monitoring Solutions">
+            <img class="img-fluid" src="img/portfolio/game.png" alt="Software Consultant">
           </a>
-          <h4 class="text-center mt-2">Monitoring Solutions</h4>
+          <h4 class="text-center mt-2">DevOps Consultant(Opensource)</h4>
         </div>
         <div class="col-md-6 col-lg-4">
           <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-5">
@@ -124,9 +124,9 @@
                 <i class="fas fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/safe.png" alt="Security Implementation">
+            <img class="img-fluid" src="img/portfolio/safe.png" alt="Technology Lead">
           </a>
-          <h4 class="text-center mt-2">Security Implementation</h4>
+          <h4 class="text-center mt-2">Technology Lead</h4>
         </div>
         <div class="col-md-6 col-lg-4">
           <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-6">
@@ -135,9 +135,9 @@
                 <i class="fas fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/submarine.png" alt="Automation Projects">
+            <img class="img-fluid" src="img/portfolio/submarine.png" alt="Senior Linux Engineer">
           </a>
-          <h4 class="text-center mt-2">Automation Projects</h4>
+          <h4 class="text-center mt-2">Senior Linux Engineer</h4>
         </div>
       </div>
     </div>
